--- a/Flexure/Controls/DesignResultControl.xaml
+++ b/Flexure/Controls/DesignResultControl.xaml
@@ -10,8 +10,10 @@
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+
         </Grid.RowDefinitions>
 
         <!-- Left: Numerical Results -->
@@ -88,7 +90,7 @@
         </StackPanel>
 
         <!-- Right: Canvas -->
-        <StackPanel Grid.Row="2"  Orientation="Horizontal" Margin="0,10,0,0">
+        <StackPanel Grid.Column="1" Grid.Row="0"  Orientation="Horizontal" Margin="0,10,0,0">
             <Canvas x:Name="cnvSection" Height="150" Width="150" HorizontalAlignment="Left" Margin="10"/>
             <Canvas x:Name="cnvStrainDiagram" Height="150" Width="150" HorizontalAlignment="Left" Margin="10"/>
             <!--<Canvas x:Name="cnvWhitneyBlock" Height="150" Width="150" HorizontalAlignment="Left" Background="LightCoral"/>-->
