--- a/Flexure/Controls/DesignResultControl.xaml
+++ b/Flexure/Controls/DesignResultControl.xaml
@@ -18,7 +18,14 @@
 
         <!-- Left: Numerical Results -->
         <StackPanel Grid.Column="0" Grid.Row="0" Margin="0,0,12,0">
-            <TextBlock Text="Design Results" FontWeight="Bold" FontSize="14" Margin="0,0,0,8"/>
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="Design Results" FontWeight="Bold" FontSize="14" Margin="0,0,0,8"/>
+                <TextBlock Grid.Row="0" Grid.Column="3" 
+                           Text="{Binding Result.crossSection.SectionSummaryString, RelativeSource={RelativeSource AncestorType=UserControl}, StringFormat={}{0:N0}}"
+                           FontWeight="Bold" FontSize="14" Margin="8,0,0,8"/>
+
+
+            </StackPanel>
 
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -90,9 +97,9 @@
         </StackPanel>
 
         <!-- Right: Canvas -->
-        <StackPanel Grid.Column="1" Grid.Row="0"  Orientation="Horizontal" Margin="0,10,0,0">
-            <Canvas x:Name="cnvSection" Height="150" Width="150" HorizontalAlignment="Left" Margin="10"/>
-            <Canvas x:Name="cnvStrainDiagram" Height="150" Width="150" HorizontalAlignment="Left" Margin="10"/>
+        <StackPanel Grid.Column="0" Grid.Row="1"  Orientation="Horizontal" Margin="0,10,0,0">
+            <Canvas x:Name="cnvSection" Height="200" Width="200" HorizontalAlignment="Left" Margin="10"/>
+            <Canvas x:Name="cnvStrainDiagram" Height="200" Width="200" HorizontalAlignment="Left" Margin="10"/>
             <!--<Canvas x:Name="cnvWhitneyBlock" Height="150" Width="150" HorizontalAlignment="Left" Background="LightCoral"/>-->
         </StackPanel>
     </Grid>
