Changed rebar catalog to a static class.  So now we don't have to pass a catalog or recreate one everytime we need it.

--- a/Flexure/Controls/DesignAllInputDialog.xaml
+++ b/Flexure/Controls/DesignAllInputDialog.xaml
@@ -38,7 +38,7 @@
             </TextBox>
             <TextBlock Text=" kip-ft or (" FontSize="12" FontWeight="Bold" VerticalAlignment="Center"/>
             <TextBlock Text="{Binding DesignMomentMu_kipin}"  FontSize="12" FontWeight="Bold" VerticalAlignment="Center"/>
-            <TextBlock Text=" kip-i)" FontSize="12" FontWeight="Bold" VerticalAlignment="Center"/>
+            <TextBlock Text=" kip-in.)" FontSize="12" FontWeight="Bold" VerticalAlignment="Center"/>
 
         </StackPanel>
 
