--- a/Flexure/Controls/DesignAllInputDialog.xaml
+++ b/Flexure/Controls/DesignAllInputDialog.xaml
@@ -46,6 +46,12 @@
             <CheckBox Margin="10,0,0,0"
                   Content="Show only unit widths (width=12)"
                   IsChecked="{Binding FilterWidth12, Mode=TwoWay}"/>
+            <CheckBox Margin="10,0,0,0"
+                  Content="Show only bars #7 or less"
+                  IsChecked="{Binding FilterMaxBar7, Mode=TwoWay}"/>
+            <CheckBox Margin="10,0,0,0"
+                  Content="Sort by Area (ascending)"
+                  IsChecked="{Binding SortByArea, Mode=TwoWay}"/>
         </StackPanel>
         <!-- Designs + Result -->
         <Grid  Grid.Row="2" Margin="5">
